--- a/templates/page_complete.html
+++ b/templates/page_complete.html
@@ -1,5 +1,12 @@
 <html>
-  <head><title>주문 완료</title></head>
+  <head>
+    <title>주문 완료</title>
+    <style>
+      body {
+          font-size: 60px;
+      }
+    </style>
+  </head>
   <body>
     <h2 class="main-title">{{table}}번 테이블 주문 완료</h2>
     <br><a href="/{{table}}">추가 주문하기</a><br><br><br>
